# steimke-app-backend-cpp

./: .dockerignore  .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  CmakeConfig.h.in  Dockerfile  README.md  cert.pem  docker-compose.yml  key.pem  main.cpp  makefile  pubkey.pem  server.pem
gtest/: CMakeLists.txt  itemtests.cpp  jsontests.cpp  main.cpp  usertest.cpp
gtest/modules/: CMakeLists.txt
include/: App.h  ConHandle.h  DBItem.h  DependencyService.h  HTTPSocket.h  IConHandle.h  IConHandler.h  IDataBase.h  IHTTPSocket.h  IJSONSerializer.h  Item.h  JSONSerializer.h  MockDataStore.h  Place.h  SQLDataBase.h  SQLDataBasePlaces.h  SimpleConHandle.h  SimpleSocket.h  User.h
logs/: basic-log.txt
modules/: CMakeLists.txt
modules/sqlite_amalg/: CMakeLists.txt
rlservlib/: App.cpp  App.h  CMakeLists.txt  DependencyService.cpp  DependencyService.h
rlservlib/datastore/: CMakeLists.txt  DBItem.cpp  IDataBase.h  SQLDataBaseItem.cpp  SQLDataBaseItem.h  SQLDataBasePlaces.cpp  SQLDataBasePlaces.h  SQLDataBaseUser.cpp  SQLDataBaseUser.h
rlservlib/jsonconv/: CMakeLists.txt  IJSONSerializer.h  JSONSerializer.cpp  JSONSerializer.h
rlservlib/models/: CMakeLists.txt  Item.cpp  Item.h  User.cpp  User.h
rlservlib/modules/: CMakeLists.txt
rlservlib/modules/sqlite_amalg/: CMakeLists.txt
rlservlib/webservice/: CMakeLists.txt  HTTPSocket.cpp  HTTPSocket.h  IConHandle.h  IConHandler.h  IHTTPSocket.h  MockConHandle.cpp  MockConHandle.h  SimpleConHandle.cpp  SimpleSocket.cpp  SimpleSocket.h  SocketEtr.cpp  SocketEtr.h  SocketYhirose.cpp  SocketYhirose.h
src/: App.cpp  CMakeLists.txt  ConHandle.cpp  DBItem.cpp  DependencyService.cpp  HTTPSocket.cpp  Item.cpp  JSONSerializer.cpp  MockDataStore.cpp  Place.cpp  SQLDataBase.cpp  SQLDataBaseItem.cpp  SQLDataBasePlaces.cpp  SQLDataBaseUser.cpp  SimpleConHandle.cpp  SimpleSocket.cpp  User.cpp  main.cpp
