find_package (SQLite3 REQUIRED)
if (SQLITE3_FOUND)
	list(APPEND EXTRA_INCLUDES ${SQLite3_INCLUDE_DIRS})
	list(APPEND EXTRA_LIBS ${SQLite3_LIBRARIES})
else(SQLITE3_FOUND)
	message( FATAL_ERROR "SQLite3 not found!!!!" )
endif (SQLITE3_FOUND)

list(APPEND EXTRA_INCLUDES ${PROJECT_BINARY_DIR})
list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/modules/libhttp/include")
list(APPEND EXTRA_LIBS "${PROJECT_SOURCE_DIR}/modules/libhttp/lib/libhttp.a")
list(APPEND EXTRA_LIBS nlohmann_json::nlohmann_json)
list(APPEND EXTRA_LIBS pthread)
list(APPEND EXTRA_LIBS ${CMAKE_DL_LIBS})

list(APPEND SOURCES App.cpp)
list(APPEND SOURCES ConHandle.cpp)
list(APPEND SOURCES DBItem.cpp)
list(APPEND SOURCES DependencyService.cpp)
list(APPEND SOURCES HTTPSocket.cpp)
list(APPEND SOURCES Item.cpp)
list(APPEND SOURCES JSONSerializer.cpp)
list(APPEND SOURCES MockDataStore.cpp)
list(APPEND SOURCES Place.cpp)
list(APPEND SOURCES SimpleConHandle.cpp)
list(APPEND SOURCES SimpleSocket.cpp)
list(APPEND SOURCES SQLDataBaseItem.cpp)
list(APPEND SOURCES SQLDataBasePlaces.cpp)
list(APPEND SOURCES SQLDataBaseUser.cpp)
list(APPEND SOURCES User.cpp)

add_executable(rlserv main.cpp ${SOURCES})

target_include_directories(rlserv PUBLIC ../include ${EXTRA_INCLUDES})
target_link_libraries(rlserv PUBLIC  ${EXTRA_LIBS})