list(APPEND WEBSERVICE_SOURCES ConHandle.cpp)
list(APPEND WEBSERVICE_SOURCES HTTPSocket.cpp)
list(APPEND WEBSERVICE_SOURCES MockConHandle.cpp)
list(APPEND WEBSERVICE_SOURCES SimpleConHandle.cpp)
list(APPEND WEBSERVICE_SOURCES SimpleSocket.cpp)
list(APPEND WEBSERVICE_SOURCES SocketYhirose.cpp)
add_library(WebService ${WEBSERVICE_SOURCES})
target_include_directories(WebService INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(WebService PUBLIC include "${PROJECT_SOURCE_DIR}/modules/libhttp/include")
target_link_libraries(WebService PUBLIC Models "/usr/lib/x86_64-linux-gnu/libssl.a" "/usr/lib/x86_64-linux-gnu/libcrypto.a" spdlog::spdlog pthread "${PROJECT_SOURCE_DIR}/modules/libhttp/lib/libhttp.a")
