list(APPEND WEBSERVICE_SOURCES MockConHandle.cpp)
list(APPEND WEBSERVICE_SOURCES SimpleConHandle.cpp)
list(APPEND WEBSERVICE_SOURCES SimpleSocket.cpp)
list(APPEND WEBSERVICE_SOURCES SocketYhirose.cpp)
add_library(WebService ${WEBSERVICE_SOURCES})
target_include_directories(WebService INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
find_package(OpenSSL REQUIRED)
target_link_libraries(WebService PUBLIC Models OpenSSL::SSL OpenSSL::Crypto spdlog::spdlog pthread)
